try fixing mobile spacing issue

--- a/src/Components/ServicesPage/ServicesPage.scss
+++ b/src/Components/ServicesPage/ServicesPage.scss
@@ -8,7 +8,7 @@
 
 .ServicesPageBGSection {
     width: 100%;
-    min-height: 35%;
+    min-height: 35vh;
     background-image: url("../../assets/new11.jpg");
     background-position: bottom;
     background-size: cover;
